2019-06-05  Felipe Castro (-) <fefcas@gmail.com>;
	* Release 3.07
	* Updated translations:
	- French.

2019-05-03  Felipe Castro (-) <fefcas@gmail.com>;

	* Release 3.06
	* Changed:
	- GtkDataBox library clean-up.
	- Updated building infra to compile also on Windows.

2019-03-17  Felipe Castro (-) <fefcas@gmail.com>;

	* Release 3.05
	* Fixed:
	- Crashing when not recognized option from command-line.
	* Added:
	- Instructions for typing with the shift keys (in the introduction).
	- Explanation about the blank lessons after 43, in basic module.
	- Possible to reset progress log of each module individually, as well
	  as character error charts or touch times charts in adaptability.
	- Possible to use paragraphs complete texts in Speed module (klavaro -x).
	* Updated translations:
	- Croatian.
	- Danish.
	- Esperanto.
	- Polish.
	- Portuguese (BR).
	- Russian.
	- Ukrainian.


2019-02-10  Felipe Castro (-) <fefcas@gmail.com>;

	* Release 3.04
	* Fixed:
	- Tutor window was not allowing to shrink horizontaly, only growing.
	  Now its horizontal scroll is allowed to appear, liberating it to shrink.
	- Colors again on keyboard buttons, they had disappeared.
	- Proficiency log file shown as touch time per key in adaptability
	  charts  was being corrupted eventually.
	- Statistics after practice were being colorized.
	- Crashing? when no <libintl.h> installed on the system and? using 
	  ./configure --disable-nls
	- bg.paragraphs and bg.words chars fixed.
	- da.paragraphs and da.words chars fixed. (ét -> et)
	- fi.paragraphs char fixed.
	- hr.paragraphs chars fixed.
	- kk.paragraphs chars fixed?
	- nl.paragraphs chars fixed? (wéér -> weer)
	- pa.paragraphs chars fixed. (removed English word quadrant)
	- ru.paragraphs chars fixed.
	- sr.paragraphs chars fixed. (ascii quotes: " ")
	- uk.paragraphs chars fixed.
	- qwertz_de.kbd chars fixed. (Ä Ö -> ä ö)
	- Substituted deprecated stuff on Glade file, for GTK+-3.8
	* Changed: