@@ -1,0 +1,15 @@
+[colors]
+char_untouched_fg=#f8f4f2
+char_untouched_bg=#202020
+char_wrong_fg=#fffff7
+char_wrong_bg=#800000
+char_correct_fg=#80ff80
+char_correct_bg=#202020
+char_retouched_fg=#ffcc99
+char_retouched_bg=#424140
+cursor_blink_fg=#000000
+cursor_blink_bg=#ffaa44
+cursor_unblink_fg=#f8f4f2
+cursor_unblink_bg=#202020
+text_intro_fg=#fefffe
+text_intro_bg=#302030
