@@ -1,0 +1,8 @@
+;+ľščťžýáíé=´ 
+qwertyuiopúä  
+asdfghjklô§ň  
+\zxcvbnm,.-   
+°1234567890%ˇ 
+QWERTYUIOP/(  
+ASDFGHJKL"!)  
+|ZXCVBNM?:_   
